--- a/_includes/latest-posts.html
+++ b/_includes/latest-posts.html
@@ -16,7 +16,9 @@
 			{% endif %}
 			
 			<div class="column is-12">
+			<a href="{{talk.url}}">
 				{% include post-card.html %}
+			</a>
 			</div>
 		{% endif %}
     {% endfor %}
