--- a/_layouts/talks.html
+++ b/_layouts/talks.html
@@ -3,13 +3,17 @@ layout: page
 ---
 
 
-<h2> Author: {{page.author}} </h2>
+<h2> Speaker: {{page.author}} </h2>
 
 <div> {{page.room}} at {{page.date | date: "%B %d, %Y at %H:%M" }}. </div>
 
+{% if page.video %}
+{% include youtube.html video=page.video %}
+{% endif %}
+
 
 {% if page.paper %}
-<h3> References </h3>
+<h3> Reference(s) </h3>
 <ul>
 {% for p in page.paper %}
 <li> {{p}} </li>
