--- a/_includes/researcher_profile.html
+++ b/_includes/researcher_profile.html
@@ -1,18 +1,17 @@
-
-
-{% if researcher.website %}
-<a href="{{researcher.website}}">
-{% endif %}
-<div>
-{% if researcher.photo %}
-<img class="img-circle" src="photo/{{researcher.photo}}">
-{% else %}
-<img class="img-circle" src="photo/avatar_empty.png">
-{% endif %}
-<div class="researcher_name">{{  researcher.name  }}</div>
-<div class="researcher_institution">{{  researcher.institution  }}</div>
-</div>
-{% if researcher.website %}
-</a>
-{% endif %}
-
+<div class="box person">
+    {% if researcher.website %}
+        <a href="{{researcher.website}}">
+    {% endif %}
+    <div class="image round">
+        {% if researcher.photo %}
+        <img src="photo/{{researcher.photo}}">
+        {% else %}
+        <img src="photo/avatar_empty.png">
+        {% endif %}
+    </div>
+    <div class="researcher_name">{{  researcher.name  }}</div>
+    <div class="researcher_institution">{{ researcher.institution }}</div>
+    {% if researcher.website %}
+        </a>
+    {% endif %}
+  </div>
